--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: 0.1.0
-          release_name: 0.1.0
-          draft: true
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          draft: false
           prerelease: false
 
       - name: Upload Release Asset
