--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: ["main", "dev" ]
+    branches: [ "main", "dev" ]
   pull_request:
-    branches: ["main", "dev" ]
+    branches: [ "main", "dev" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -21,8 +21,8 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        python-version: ['3.9', '3.10.8', '3.11']
-        os: [ubuntu-latest, windows-latest]
+        python-version: [ '3.9', '3.10.8', '3.11' ]
+        os: [ ubuntu-latest, windows-latest ]
 
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -67,8 +67,8 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        python-version: ['3.9', '3.10.8', '3.11']
-        os: [ubuntu-latest, windows-latest]
+        python-version: [ '3.9', '3.10.8', '3.11' ]
+        os: [ ubuntu-latest, windows-latest ]
     steps:
       - uses: actions/checkout@v4
 
@@ -97,14 +97,17 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ ubuntu-latest, windows-latest ]
     steps:
+      - name: setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.10.8
       - uses: actions/checkout@v4
 
       - name: install package by setup.py
         run: |
-          pip install Cython
-          pip install numpy
+          pip install Cython numpy
           pip install .
 
       - name: run the test script
