--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,6 +101,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.10.8
+
       - name: install package by setup.py
         run: |
           pip install Cython numpy
