--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
       - name: install dependence
         working-directory: anomaly-detector
         run: |
-          poetry env use ${{matrix.python-version}}
+#          poetry env use ${{matrix.python-version}}
           pip install -r ../requirements.txt
           poetry install --only-root
 
@@ -55,8 +55,8 @@ jobs:
         working-directory: anomaly-detector/tests
         run: |
           pip install pytest
-          poetry run pytest test_demo.py
-          poetry run python uvad_test.py
+          python test_demo.py
+          python uvad_test.py
 
       - name: Analyze code with pylint
         run: |
