--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,11 @@ jobs:
         run: |
           poetry env use ${{matrix.python-version}}
           pip install -r ../requirements.txt
-          poetry install --only-root
+
+      - name: Add current working directory to PYTHONPATH
+        working-directory: anomaly-detector
+        run: echo "PYTHONPATH=$PYTHONPATH:$PWD" >> $GITHUB_ENV
+
 
       - name: compile .pyx file
         run: |
